crates/language-v2/tests/src/fail/p0_parsing/duplicate_map_key/test.stderr
error: Duplicate map key.
  --> src/fail/p0_parsing/duplicate_map_key/test.rs:21:29
   |
21 | ...                   field_1 = Required(Baz),
   |                       ^^^^^^^
